<resources>
    <string name="app_name" translatable="false">ft_hangouts</string>
    <string name="action_settings">Settings</string>
    <string name="main_hint_press_to_create_contact">Press + to create contact</string>
    <string name="add_contact_save">Save</string>
    <string name="add_contact_first_name">First Name</string>
    <string name="add_contact_last_name">Last Name</string>
    <string name="add_contact_phone_number">Phone Number</string>
    <string name="add_contact_email">Email</string>
    <string name="add_contact_title">Add contact</string>
    <string name="add_contact_no_number_alert">Enter phone number</string>
    <string name="chat_hint_message">Message…</string>
    <string name="chat_unexpected_error">Unexpected Error</string>
    <string name="chat_list_item_no_message">No messages yet</string>
    <string name="contact_info_alert_dialog_message">Do you really want to delete this contact</string>
    <string name="contact_info_alert_yeah">Yeah</string>
    <string name="contact_info_alert_dialog_no">No, please</string>
    <string name="db_error">Error</string>
    <string name="alert_choose_ph_src">Choose photo source</string>
    <string name="alert_src_camera">Camera</string>
    <string name="alert_src_gallery">Gallery</string>
    <string name="db_failed">Failed</string>
    <string name="db_success">Success</string>
    <string name="setting_title">Setting</string>
    <string name="setting_language">Language</string>
    <string name="setting_default_language">Default language</string>
    <string name="setting_english" translatable="false">English</string>
    <string name="setting_uk" translatable="false">Українська</string>
    <string name="setting_francais" translatable="false">Francais</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_hive" translatable="false">Hive</string>
    <string name="setting_union" translatable="false">Union</string>
    <string name="setting_alliance" translatable="false">Alliance</string>
    <string name="setting_empire" translatable="false">Empire</string>
    <string name="setting_chat_background">Chat background</string>
    <string name="create_contact_check_and_try">Check data and try later</string>
    <string name="create_contact_select_pic">Select Picture</string>
    <string name="edit_contact_button_edit">Edit</string>
    <string name="edit_contact_toolbar_title">Edit contact</string>
    <string name="data_saved">Saved</string>
</resources>